--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -28,6 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
@@ -52,6 +55,17 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+#base {
+  height: 70%;
+}
+
+.timeline-container {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  height: 100%; /* Ensure it spans the full height of its parent */
 }
 
 @media (prefers-color-scheme: light) {
