--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,14 @@
   background-image: url('./assets/basketball_background_plain.png'); /* Add background image */
   background-size: cover; /* Ensure the image covers the entire area */
   background-position: center; /* Center the image */
-  /* text-align: center; */
+}
+
+#base-blur {
+  width: 100vw;
+  height: 100vh;
+  padding: 2rem;
+  position: absolute;
+  filter: blur(5px);
 }
 
 .evaluate-page {
